# xlb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  rust-analyzer.toml  xlb.yaml
admin-ui/: .prettierignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
admin-ui/src/: App.vue  router.ts  styles.css  types.ts
admin-ui/src/api/: status.ts
admin-ui/src/components/: BackendDrawer.vue  BackendTable.vue  CloseBreakdown.vue  ComingSoon.vue  HelpTip.vue  MetricCard.vue  UPlotChart.vue  XlbMark.vue
admin-ui/src/data/: demo-status.ts  mock.ts  unavailable-status.ts
admin-ui/src/pages/: BackendsPage.vue  ConnectionsPage.vue  DiagnosticsPage.vue  EventsPage.vue  OverviewPage.vue
admin-ui/src/stores/: status.ts
admin-ui/tests/: admin-ui.spec.ts  hosted-demo.spec.ts
docs/: README.md  mkdocs.yml  package-lock.json  package.json  wrangler.jsonc
docs/docs/: _headers  architecture.md  index.md  llms.txt  robots.txt
docs/docs/configuration/: index.md  overview.md  reference.md
docs/docs/deployment/: helm.md  kubernetes.md
docs/docs/getting-started/: installation.md  kubernetes.md  quickstart.md
docs/docs/operations/: admin-console.md  connection-lifecycle.md  observability.md  troubleshooting.md
docs/docs/stylesheets/: extra.css
docs/engineering/: production-readiness-plan.md
helm/xlb/: Chart.yaml  README.md  values.yaml
helm/xlb/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
scripts/: run-with-sudo.sh  setup_veth.sh
xlb/: Cargo.toml  build.rs
xlb-common/: Cargo.toml
xlb-common/src/: consts.rs  errs.rs  lib.rs  net.rs  types.rs  xlb_status.rs
xlb-common/src/config/: ebpf.rs  mod.rs  net.rs  routing.rs
xlb-ebpf/: Cargo.toml
xlb-ebpf/src/: lib.rs  main.rs
xlb-ebpf/src/balancing/: balancing.rs  mod.rs  roundrobin.rs
xlb-ebpf/src/handler/: handler.rs  iface.rs  mod.rs  tcp.rs  types.rs  utils.rs
xlb-ebpf/src/handler/tcp/: syn.rs
xlb-ebpf/src/net/: checksum.rs  mod.rs  packet.rs  types.rs  utils.rs
xlb-ebpf/src/net/eth/: eth.rs  mac.rs  mod.rs
xlb-ebpf/src/net/ip/: ipv4.rs  mod.rs
xlb-ebpf/src/net/ip/v4/: header.rs  mod.rs
xlb-ebpf/src/net/ip/v6/: header.rs  mod.rs
xlb-ebpf/src/net/packet/: mod.rs  packet.rs
xlb-ebpf/src/net/proto/: tcp.rs  udp.rs
xlb-ebpf/src/net/proto/tcp/: checksum.rs  header.rs  mod.rs  utils.rs
xlb-ebpf/src/utils/: context.rs  eth.rs  ip.rs  mod.rs  proto.rs
xlb/src/: config.rs  ebpf.rs  lib.rs  listen.rs  main.rs  xlb_config.rs
xlb/src/loop/: cleanup.rs  loop.rs  metrics.rs  mloop.rs  mod.rs  utils.rs
xlb/src/metrics/: egress.rs  global.rs  ingress.rs  mod.rs  otel.rs  resource.rs
xlb/src/provider/: fixed.rs  kubernetes.rs  mod.rs  provider.rs
xlb/src/provider/kubernetes/: endpoints.rs
xlb/src/status/: http.rs  mod.rs  model.rs  snapshot.rs
xlb/src/status/snapshot/: tests.rs
xlb/src/system/: checks.rs  iface.rs  mod.rs  route.rs
xlb/src/system/resource/: cpu.rs  mod.rs  network.rs
xtask/: Cargo.toml
xtask/src/: main.rs
