[package]
name = "xlb-common"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[features]
default = []
user = ["aya"]

[dependencies]
aya = { workspace = true, optional = true }
strum = { version = "0.27.2", default-features = false, features = ["strum_macros", "derive"] }

[lib]
path = "src/lib.rs"
