[package]
name = "xlb-ebpf"
version = "0.1.0"
edition.workspace = true
autobins = false  # Don't auto-discover main.rs as a binary

[dependencies]
xlb-common = { path = "../xlb-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.1.0"

[build-dependencies]
which = { workspace = true }
