[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0"
config = { version = "0.15.18", default-features = false, features = ["convert-case", "yaml"] }
log = { workspace = true }
schemars = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
xlb-common = { path = "../xlb-common", features = ["user"] }
